6.8.17
[upd] Fix comments on Kodi 19+ |contrib: ramateur|
[upd] Update icon and fanart |contrib: papercore-dev|
[lang] translation updates from Weblate

6.8.16
[fix] Fix playback of some content (ie. Music videos)
[fix] Calcuate n parameter to enable ratebypass

6.8.15
[fixup] No streams found, consent cookies |contrib: jaylinski|
[fixup] Age gate detection, show age gate error instead of 'No streams found'
[fixup] encoding of some titles/authors - ie. russian
[lang] translation updates from Weblate

6.8.14
[fixup] playback of some streams due to encoding issues
[fixup] default player response type

6.8.13
[fix] player config and client discovery
[fix] No Streams Found |contrib: 14mRh4X0r|
[fix] capability map to contain unversioned capabilities |contrib: jmbreuer|
[lang] zh_tw strings |contrib: JuenTingShie|

6.8.11
[fix] mktime overflow when loading My Subscriptions
[fix] encoding issues in search history |contrib: dreznichuk|

6.8.10
[fix] fix javascript player retrieval and playback of some videos for affected users |contrib: thomazz-nl|
    - Invalid URL 'http://': No host supplied

6.8.9
[fix] my subscriptions section using YouTube RSS |contrib: PureHemp|
[fix] items per page settings on Kodi 19
[chg] recommendations only available for users with custom history playlist id configured
[chg] no longer show watch later unless custom watch later playlist is configured
[rem] remove usage of discontinued api and dual login (no longer required)

6.8.8
[fixup] encoding of subtitle track names

6.8.7
[fixup] encoding of titles and authors during playback

6.8.6
[fix] some videos failing to play with an Invalid URL exception
[fix] searching in some instances with encoding issues |contrib: tsaklidis|
[fix] support python 3.9 html.unescape |contrib: asavah|

6.8.5
[fix] playback of purchased movies |contrib: MisterD81|
[fix] notifications for some languages on Kodi 19
[fix] searching for some languages
[fix] loading on some versions of python 3