@@ -1,5 +1,6 @@
 6.8.17
-[upd] Fix comments on Kodi 19+ |contrib: ramateur|
+[fix] Fix comments on Kodi 19+ |contrib: ramateur|
+[fix] Fix ratebypass |contrib: ramateur|
 [upd] Update icon and fanart |contrib: papercore-dev|
 [lang] translation updates from Weblate
 
